# OSharee

./: AUTHOR  ChangeLog  INSTALL  NEWS  README  configure.ac
Resources/: .directory  Makefile.am  OSharee.desktop
Source/: Azan.h  Makefile.am  azan.cpp  main.cpp  mohasebegar_owghat.cpp  mohasebegar_owghat.h
