#datadir = /usr/share or something like that
#here we create a directory in /usr/share and then put some Data in it
Resourcesdir = $(datadir)/OSharee/Resources
Startupdir = $(HOME)/.config/autostart

Resources_DATA   = azan.ogg Info.png kaba.png kubbetussahra.png kuran.png mescidinebevi.png mescidinebevik.png minber.png seccade.png sunrise.png sunset.png tesbih.png
Startup_DATA     = OSharee.desktop

EXTRA_DIST = azan.ogg Info.png kaba.png kubbetussahra.png kuran.png mescidinebevi.png mescidinebevik.png minber.png seccade.png sunrise.png sunset.png tesbih.png OSharee.desktop
