#some variable for data directory defined here "These Value Can use in source file"
INCLUDES =	-DOSHAREE_RESOURCES=\"$(datadir)/OSharee/Resources\"

bin_PROGRAMS = OSharee

OSharee_SOURCES = main.cpp azan.cpp Azan.h mohasebegar_owghat.cpp mohasebegar_owghat.h

OSharee_CFLAGS = $(LibNotify_CFLAGS)
OSharee_CXXFLAGS = $(LibNotify_CFLAGS)
OSharee_LDFLAGS = $(LibNotify_LIBS)
